--- a/src/app/login/changepasswordlogin/changepasswordlogin.component.html
+++ b/src/app/login/changepasswordlogin/changepasswordlogin.component.html
@@ -81,11 +81,6 @@
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
                   </button>
-                  <!-- <button class="btn-med btn-confirm-login" data-toggle="modal" data-target="#confirm" data-backdrop="static"	data-keyboard="false"  *ngIf="changepassword == 'modal'">
-                    <p>ตกลง
-                      <i class="fa fa-angle-right" aria-hidden="true"></i>
-                    </p>
-                  </button> -->
                 </div>
               </div>
 
@@ -139,20 +134,22 @@
             <div class="btn-wrapper">
               <button class="btn-med btn-blue btn" type="button" (click)="requestotp()" [disabled]="loading">
                 {{ 'BUTTON.otp' | translate }}
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <!-- <div class="d-xl-block d-none">
+                  <i class="fa fa-angle-right" aria-hidden="true"></i>
+                </div> -->
               </button>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p>{{ 'LOGIN.otp-receive' | translate }}</p>
+            <p>{{ 'LOGIN.otp-receive' | translate }} Ref. Code {{ User.refotp }}</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss4('otp')">
             <div class="input-wrapper">
-              <input id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
+              <input id="otp" name="otp" maxlength="6" type="password" formControlName="otp" (keypress)="numberOnly($event)">
               <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
                 <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate }}</p>
                 <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
