--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,19 +12,21 @@
 	</div>
 	<div class="clearfix"></div>
 	<div class="copyright .d-none .d-sm-block" style="margin-top: 50px">
+		<a href="Uploads/คู่มือ LHFund Online.pdf" target="_blank">ดาวน์โหลดคู่มือการใช้งานระบบ LHFund Online</a>
 		<h5>{{ 'FOOTER.content1' | translate }} {{ 'FOOTER.content2' | translate }}
-			<a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
+			<a href="http://www.lhfund.co.th/" target="_blank" class="linklogin">{{ 'FOOTER.content3' | translate }}</a>
 		</h5>
-		<p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+		<p>{{ 'FOOTER.content4' | translate }} {{ 'FOOTER.content5' | translate }}<a href="mailto:marketing@lhfund.co.th" class="linklogin">marketing@lhfund.co.th</a></p>
 	</div>
 	<div class="clearfix"></div>
 	<footer id="footer" class="footer">
 		<div class="copyright-footer">
+			<a href="Uploads/คู่มือ LHFund Online.pdf" target="_blank">ดาวน์โหลดคู่มือการใช้งานระบบ LHFund Online</a>
 			<p>{{ 'FOOTER.content1' | translate }}<br class="d-block d-sm-none" />{{ 'FOOTER.content2' | translate }}
 			</p>
-			<a href="http://www.lhfund.co.th/" target="_blank">{{ 'FOOTER.content3' | translate }}</a>
+			<a href="http://www.lhfund.co.th/" target="_blank" class="linklogin">{{ 'FOOTER.content3' | translate }}</a>
 			<p>{{ 'FOOTER.content4' | translate }} <br class="d-block d-sm-none" />{{ 'FOOTER.content5' | translate }}
-				<a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+				<a href="mailto:marketing@lhfund.co.th" class="linklogin">marketing@lhfund.co.th</a></p>
 		</div>
 	</footer>
 
@@ -35,41 +37,91 @@
 					<h4 class="modal-title">ข้อตกลงและเงื่อนไขในการใช้บริการ</h4>
 				</div>
 				<div class="modal-body" id="content-scroll-1">
-					<p>
-						บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด (ในข้อตกลงนี้เรียกว่า “บริษัท”) เป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้
-						เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัท และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัท การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัท
-						ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทและหน้าจอใดๆของเว็บไซต์ หมายถึง
-						ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้ โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท
-					</p>
+					<!-- <p>
+					บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด (ในข้อตกลงนี้เรียกว่า “บริษัท”) เป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้
+					เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัท และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัท การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัท
+					ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทและหน้าจอใดๆของเว็บไซต์ หมายถึง
+					ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้ โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท
+				</p>
 
-					<h3>ลิขสิทธิ์</h3>
-					<p>
-						บริษัทเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัท
+				<h3>ลิขสิทธิ์</h3>
+				<p>
+					บริษัทเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัท
+					เว้นแต่จะมีการระบุบอย่างชัดเจนเป็นอย่างอื่น ห้ามทำการดัดแปลง จัดเก็บในระบบที่สามารถนำมาใช้งานได้ ถ่ายโอน ลอกเลียนแบบ
+					เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัท
+				</p>
+
+				<h3>การใช้ข้อมูลและส่วนประกอบต่างๆ</h3>
+				<p>
+					ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
+					โดยไม่ต้องแจ้งให้ท่านทราบล่วงหน้า บริษัทสงวนสิทธิ์ในการกลั่นกรองและคัดเลือกผู้ประสงค์ขอใช้บริการต่างๆที่ปรากฏบนเว็บไซต์นี้ตามหลักเกณฑ์ของบริษัท
+					บริษัทจะดำเนินการปรับปรุงข้อมูล ผลิตภัณฑ์และบริการต่างๆของบริษัท ที่ปรากฏในเว็บไซต์ให้ถูกต้องและทันสมัยอยู่เสมอ การเชื่อมต่อเข้าสู่แหล่งอินเตอร์เน็ตอื่นผ่านเว็บไซต์ของบริษัท
+					เป็นความเสี่ยงของท่านเอง และท่านยอมรับว่าบริษัทไม่ต้องรับผิดชอบต่อความเสียหายที่อาจเกิดขึ้นจากการใช้บริการผ่านเว็บไซต์ของบริษัท
+					ไม่ว่าทางตรงหรือทางอ้อม ความบกพร่อง ความล่าช้าในการดำเนินการ การถ่ายโอนข้อมูล หรือความเสียหายที่เกิดจากไวรัสคอมพิวเตอร์
+					การไม่ทำงานของเครือข่ายหรือระบบ ระหว่างการใช้งานเว็บไซต์ของบริษัท หากมีผลิตภัณฑ์อื่นใดที่มีการนำเสนอผ่านเว็บไซต์ของบริษัท
+					บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ
+				</p>
+
+				<h3>การเชื่อมโยงกับเว็บไซต์อื่นๆ</h3>
+				<p>
+					เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
+					รวมทั้ง มิได้สื่อโดยนัยว่าบริษัทให้การรับรองหรือแนะนำข้อมูลในเว็บไซต์เหล่านั้น การที่ท่านเลือกเข้าเยื่ยมชมเว็บไซต์ที่ให้บริการดาวน์โหลดซอฟแวร์
+					เพื่อวัตถุประสงค์ในการให้ข้อมูลและเพื่อความสะดวกของท่าน ถือว่าท่านยอมรับความเสี่ยงแต่เพียงผู้เดียว หากมีความสูญเสียหรือความเสียหายที่เกิดจากการที่ท่านดาวน์โหลดซอฟแวร์ดังกล่าว
+					บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว
+				</p> -->
+					<p>1) บริการนี้ใช้เฉพาะผู้ลงทุนที่เปิดบัญชีกับบริษัทหลักทรัพย์จัดการกองทุนแลนด์ แอนด์ เฮ้าส์ จำกัด เท่านั้น</p>
+					<p>2) ผู้ถือหน่วยลงทุนสามารถทำรายการซื้อ ขาย สับเปลี่ยนหน่วยลงทุนได้ทุกวันทำการซื้อขายภายในเวลาที่บริษัทจัดการกำหนดของแต่ละกองทุน
+						(หากผู้ถือหน่วยลงทุนส่งคำสั่งนอกเวลาทำการระบบจะแจ้งเป็นรายการของวันทำการถัดไป)</p>
+					<p>3) การทำรายการผ่านระบบ LHFund online จะชำระเงินค่าซื้อหน่วยลงทุนผ่านระบบหักบัญชีแบบอัตโนมัติ (ATS) เท่านั้น ซึ่งท่านจะต้องได้รับการอนุมัติการหักเงินจากธนาคารเจ้าของบัญชีก่อน</p>
+					<p>4) การทำรายการผ่าน LHFund online อาจไม่สามารถทำรายการได้หากมีข้อขัดข้องทางเทคนิคเกิดขึ้นได้ ทั้งนี้ผู้ถือหน่วยลงทุนสามารถสอบถามข้อมูลได้ที่ฝ่ายการตลาด
+						บลจ.แลนด์ แอนด์ เฮาส์ จำกัด</p>
+					<p>Tel. 02-286-3484 หรือ E-mail : <a href="mailto:marketing@lhfund.co.th">marketing@lhfund.co.th</a></p>
+					<p>5) การทำรายการผ่านระบบ LHFund online สามารถทำรายการด้วยจำนวนเงินขั้นต่ำในการส่งคำสั่งซื้อได้ตั้งแต่ 1,000 บาท ขึ้นไป
+						หรือมูลค่าขั้นต่ำที่กองทุนกำหนดโดยใช้ค่าที่สูงกว่า</p>
+					<p>6) บริษัทจัดการจะยึดเวลาของการทำรายการทาง LHFund online ตามเวลาของระบบที่ใช้ในบริษัท</p>
+					<p>7) การลงทุนมีความเสี่ยง ผู้ลงทุนควรศึกษาข้อมูลก่อนการตัดสินใจลงทุน</p>
+					<p>8) การลงทุนในหน่วยลงทุนมิใช่การฝากเงิน และมีความเสี่ยงของการลงทุน ผู้ลงทุนควรลงทุนในกองทุนรวม ดังกล่าว เมื่อเห็นว่าการลงทุนในกองทุนรวมเหมาะสมกับวัตถุประสงค์การลงทุนของตนและผู้ลงทุนยอมรับความเสี่ยงที่อาจเกิดขึ้นจากการลงทุนดังกล่าวได้
+						โดยผู้ลงทุนอาจได้รับเงินลงทุนคืนมากกว่า หรือน้อยกว่าเงินลงทุนเริ่มแรกก็ได้</p>
+					<p>9) ผู้ลงทุนควรศึกษาข้อมูลในหนังสือชี้ชวนให้เข้าใจ และควรเก็บหนังสือชี้ชวนไว้เพื่อใช้อ้างอิงในอนาคต และเมื่อมีข้อสงสัยให้สอบถามผู้ติดต่อกับผู้ลงทุนให้เข้าใจก่อนซื้อหน่วยลงทุน</p>
+					<p>10) ในกรณีที่ผู้ลงทุนต้องการทราบข้อมูลหรือเอกสารเพิ่มเติม หรือมีข้อสงสัยเกี่ยวกับการลงทุน ผู้ลงทุนสามารถติดต่อบริษัทจัดการ
+						หรือผู้สนับสนุนการขายหรือรับซื้อคืน หรือตัวแทนที่ได้รับการแต่งตั้งจากบริษัทจัดการทุกแห่ง</p>
+					<p>11) ผู้ลงทุนสามารถตรวจดูข้อมูลที่อาจมีผลกระทบต่อการตัดสินใจลงทุน เช่น การทำธุรกรรมกับบุคคลที่เกี่ยวข้องได้ที่สำนักงานคณะกรรมการ
+						ก.ล.ต. หรือโดยผ่านเครือข่ายอินเทอร์เน็ตของสำนักงานคณะกรรมการ ก.ล.ต. (<a href="http://www.sec.or.th/" target="_blank">www.sec.or.th</a>)</p>
+					<p>12) การวัดผลการดำเนินงานของกองทุนรวมบนเว็บไซต์นี้ ได้จัดทำขึ้นตามมาตรฐานการวัดผลการดำเนินงานของสมาคมบริษัทจัดการลงทุน</p>
+					<p>13) ผลการดำเนินงานในอดีตของกองทุน มิได้เป็นสิ่งยืนยันผลการดำเนินงานในอนาคต</p>
+					<p>14) สำหรับกองทุนรวมเพื่อการเลี้ยงชีพและกองทุนรวมหุ้นระยะยาว</p>
+					<p>&nbsp;14.1) ผู้ลงทุนไม่สามารถนำหน่วยลงทุนของกองทุนไปจำหน่าย โอน จำนำ หรือนำไปเป็นประกัน</p>
+					<p>&nbsp;14.2) ผู้ถือหน่วยลงทุนของกองทุน จะไม่ได้รับสิทธิประโยชน์ทางภาษี หากไม่ปฏิบัติตามเงื่อนไขการลงทุนและจะต้องคืนสิทธิประโยชน์ทางภาษีที่เคยได้รับภายในกำหนดเวลา
+						มิฉะนั้นจะต้องชำระเงินเพิ่มและเบี้ยปรับตามประมวลรัษฎากร</p>
+					<p>15) ข้อมูลต่าง ๆ ที่ปรากฏอยู่ในเว็บไซต์นี้ บริษัทจัดการได้ใช้ความพยายามในการจัดทำและรวบรวมขึ้นบนพื้นฐานของแหล่งข้อมูลที่มีความน่าเชื่อถือ
+						เพื่อทำให้ข้อมูลต่าง ๆ มีความถูกต้องมากที่สุดเท่าที่จะเป็นไปได้ อย่างไรก็ตาม บริษัทจัดการและผู้บริหาร รวมถึงพนักงานเจ้าหน้าที่ของบริษัทจัดการ
+						มิอาจรับประกันความถูกต้อง ครบถ้วน หรือความน่าเชื่อถือของข้อมูลดังกล่าวได้ ทั้งนี้ อาจมีสาเหตุมาจากข้อมูลนั้นเอง หรืออาจมาจากสาเหตุอื่นใด
+						ดังนั้น หากผู้ลงทุนจะใช้ข้อมูลที่ปรากฏอยู่ในเว็บไซต์นี้ เพื่อการดำเนินการอย่างใดอย่างหนึ่ง ผู้ลงทุนควรใช้ด้วยความรอบคอบ
+						หรือใช้ข้อมูลจากแหล่งอื่น ๆ ประกอบดุลยพินิจในการพิจารณาตัดสินใจด้วย</p>
+					<p>16) บริษัทจัดการเป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้ เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัทจัดการ
+						และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัทจัดการ การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัทจัดการ
+						ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทจัดการและหน้าจอใดๆของเว็บไซต์
+						หมายถึง ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้ โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท</p>
+					<p>17) บริษัทจัดการเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัทจัดการ
 						เว้นแต่จะมีการระบุบอย่างชัดเจนเป็นอย่างอื่น ห้ามทำการดัดแปลง จัดเก็บในระบบที่สามารถนำมาใช้งานได้ ถ่ายโอน ลอกเลียนแบบ
-						เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัท
-					</p>
-
-					<h3>การใช้ข้อมูลและส่วนประกอบต่างๆ</h3>
-					<p>
-						ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
+						เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัทจัดการ</p>
+					<p>18) ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
 						โดยไม่ต้องแจ้งให้ท่านทราบล่วงหน้า บริษัทสงวนสิทธิ์ในการกลั่นกรองและคัดเลือกผู้ประสงค์ขอใช้บริการต่างๆที่ปรากฏบนเว็บไซต์นี้ตามหลักเกณฑ์ของบริษัท
 						บริษัทจะดำเนินการปรับปรุงข้อมูล ผลิตภัณฑ์และบริการต่างๆของบริษัท ที่ปรากฏในเว็บไซต์ให้ถูกต้องและทันสมัยอยู่เสมอ การเชื่อมต่อเข้าสู่แหล่งอินเตอร์เน็ตอื่นผ่านเว็บไซต์ของบริษัท
 						เป็นความเสี่ยงของท่านเอง และท่านยอมรับว่าบริษัทไม่ต้องรับผิดชอบต่อความเสียหายที่อาจเกิดขึ้นจากการใช้บริการผ่านเว็บไซต์ของบริษัท
 						ไม่ว่าทางตรงหรือทางอ้อม ความบกพร่อง ความล่าช้าในการดำเนินการ การถ่ายโอนข้อมูล หรือความเสียหายที่เกิดจากไวรัสคอมพิวเตอร์
 						การไม่ทำงานของเครือข่ายหรือระบบ ระหว่างการใช้งานเว็บไซต์ของบริษัท หากมีผลิตภัณฑ์อื่นใดที่มีการนำเสนอผ่านเว็บไซต์ของบริษัท
-						บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ
-					</p>
-
-					<h3>การเชื่อมโยงกับเว็บไซต์อื่นๆ</h3>
-					<p>
-						เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
+						บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ</p>
+					<p>19) เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
 						รวมทั้ง มิได้สื่อโดยนัยว่าบริษัทให้การรับรองหรือแนะนำข้อมูลในเว็บไซต์เหล่านั้น การที่ท่านเลือกเข้าเยื่ยมชมเว็บไซต์ที่ให้บริการดาวน์โหลดซอฟแวร์
 						เพื่อวัตถุประสงค์ในการให้ข้อมูลและเพื่อความสะดวกของท่าน ถือว่าท่านยอมรับความเสี่ยงแต่เพียงผู้เดียว หากมีความสูญเสียหรือความเสียหายที่เกิดจากการที่ท่านดาวน์โหลดซอฟแวร์ดังกล่าว
-						บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว
-					</p>
+						บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว</p>
+					<p>20) บริษัทจัดการขอสงวนสิทธิ์ในการแก้ไข ปรับปรุง หรือเปลี่ยนแปลงข้อมูลใด ๆ ในเว็บไซต์นี้ได้โดยไม่จำเป็นต้องแจ้งให้ทราบล่วงหน้าแต่อย่างใด</p>
+					<p>ข้าพเจ้าได้อ่านและยอมรับเงื่อนไขและข้อกำหนดต่าง ๆ ที่ปรากฏอยู่ข้างต้นแล้ว</p>
+
+
 				</div>
 				<div class="modal-footer">
-
 					<div class="row justify-content-end">
 						<div class="col-lg-3 col-md-6">
 							<button class="btn-med btn-primary" data-dismiss="modal">
@@ -81,89 +133,5 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
-
 	</div>
-
-
-
-	<!-- <p-dialog [(visible)]="display" [modal]="true" [responsive]="true" [minWidth]="200" [draggable]="false" [resizable]="false"
- [baseZIndex]="10000">
-	<p-header>
-		ข้อตกลงและเงื่อนไขในการใช้บริการ
-	</p-header>
-
-	บริษัทหลักทรัพย์จัดการกองทุน แลนด์ แอนด์ เฮ้าส์ จำกัด (ในข้อตกลงนี้เรียกว่า “บริษัท”) เป็นเจ้าของและผู้ดูแลจัดการเว็บไซต์นี้
-	เพื่อให้ข้อมูลเกี่ยวกับผลิตภัณฑ์และบริการต่างๆของบริษัท และความสะดวกในการติดต่อสื่อสารระหว่างท่านกับบริษัท การใช้เว็บไซต์นี้จึงต้องเป็นไปตามข้อตกลงและเงื่อนไขการใช้บริการเว็บไซต์ของบริษัท
-	ซึ่งท่านควรอ่านข้อกำหนดและเงื่อนไขต่างๆเหล่านี้โดยละเอียด ในการเข้าถึงเว็บไซต์ของบริษัทและหน้าจอใดๆของเว็บไซต์ หมายถึง ท่านตกลงผูกพันทางกฎหมายตามข้อกำหนดและเงื่อนไขการใช้บริการนี้
-	โปรดอย่าเข้าใช้เว็บไซต์นี้ หากท่านไม่ยอมรับข้อตกลงและเงื่อนไขของบริษัท
-
-
-	<h3>ลิขสิทธิ์</h3>
-
-	บริษัทเป็นเจ้าของลิขสิทธิ์ใน ภาพ ข้อความ การแสดงผล รูปแบบนำเสนอ เครื่องหมายการค้า และส่วนประกอบอื่นๆที่ปรากฏในเว็บไซต์ของบริษัท
-	เว้นแต่จะมีการระบุบอย่างชัดเจนเป็นอย่างอื่น ห้ามทำการดัดแปลง จัดเก็บในระบบที่สามารถนำมาใช้งานได้ ถ่ายโอน ลอกเลียนแบบ เผยแพร่หรือใช้ข้อมูลและส่วนประกอบนั้นโดยวิธีอื่นใด
-	เพื่อวัตถุประสงค์ทางการค้า โดยมิได้รับความยินยอมล่วงหน้าเป็นลายลักษณ์อักษรจากบริษัท
-
-
-	<h3>การใช้ข้อมูลและส่วนประกอบต่างๆ</h3>
-
-	ผลิตภัณฑ์ การบริการต่างๆ ข้อมูล และส่วนประกอบต่างๆ ที่ปรากฏอยู่บนเว็บไซต์ของบริษัท อาจมีการเปลี่ยนแปลงได้โดยดุลพินิจของบริษัท
-	โดยไม่ต้องแจ้งให้ท่านทราบล่วงหน้า บริษัทสงวนสิทธิ์ในการกลั่นกรองและคัดเลือกผู้ประสงค์ขอใช้บริการต่างๆที่ปรากฏบนเว็บไซต์นี้ตามหลักเกณฑ์ของบริษัท
-	บริษัทจะดำเนินการปรับปรุงข้อมูล ผลิตภัณฑ์และบริการต่างๆของบริษัท ที่ปรากฏในเว็บไซต์ให้ถูกต้องและทันสมัยอยู่เสมอ การเชื่อมต่อเข้าสู่แหล่งอินเตอร์เน็ตอื่นผ่านเว็บไซต์ของบริษัท
-	เป็นความเสี่ยงของท่านเอง และท่านยอมรับว่าบริษัทไม่ต้องรับผิดชอบต่อความเสียหายที่อาจเกิดขึ้นจากการใช้บริการผ่านเว็บไซต์ของบริษัท
-	ไม่ว่าทางตรงหรือทางอ้อม ความบกพร่อง ความล่าช้าในการดำเนินการ การถ่ายโอนข้อมูล หรือความเสียหายที่เกิดจากไวรัสคอมพิวเตอร์
-	การไม่ทำงานของเครือข่ายหรือระบบ ระหว่างการใช้งานเว็บไซต์ของบริษัท หากมีผลิตภัณฑ์อื่นใดที่มีการนำเสนอผ่านเว็บไซต์ของบริษัท
-	บริษัทไม่รับผิดชอบต่อการรับประกันความพึงพอใจในผลิตภัณฑ์และบริการนั้นๆ
-
-
-	<h3>การเชื่อมโยงกับเว็บไซต์อื่นๆ</h3>
-
-	เว็บไซต์นี้อาจมีการเชื่อมโยงกับเว็บไซต์อื่นๆ ซึ่งอยู่ภายใต้การให้บริการและดูแลจัดการโดยบุคคลที่สาม บริษัทมิได้ให้การรับรองหรือยืนยันความถูกต้องในเนื้อหาของเว็บไซต์เหล่านั้น
-	รวมทั้ง มิได้สื่อโดยนัยว่าบริษัทให้การรับรองหรือแนะนำข้อมูลในเว็บไซต์เหล่านั้น การที่ท่านเลือกเข้าเยื่ยมชมเว็บไซต์ที่ให้บริการดาวน์โหลดซอฟแวร์
-	เพื่อวัตถุประสงค์ในการให้ข้อมูลและเพื่อความสะดวกของท่าน ถือว่าท่านยอมรับความเสี่ยงแต่เพียงผู้เดียว หากมีความสูญเสียหรือความเสียหายที่เกิดจากการที่ท่านดาวน์โหลดซอฟแวร์ดังกล่าว
-	บริษัทไม่ต้องรับผิดชอบ บริษัทขอแนะนำให้ท่านอ่านรายละเอียดข้อตกลงและเงื่อนไขการใช้บริการ ตลอดจนนโยบายการรักษาความปลอดภัยของเว็บไซต์ที่เชื่อมโยงนั้นก่อนเข้าใช้เว็บไซต์ดังกล่าว
-
-	<p-footer>
-
-		
-		<div class="row justify-content-end">
-			<div class="col-sm-3">
-				<button class="btn-med btn-primary" (click)="display=false">
-					<p style="margin-top: 7px;">ยอมรับ
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</p>
-				</button>
-			</div>
-		</div>
-
-		
-	</p-footer>
-</p-dialog> -->
-	<!-- <ng-template #content let-c="close" let-d="dismiss">
-	<div class="modal-header">
-		<h4 class="modal-title" id="modal-basic-title">Profile update</h4>
-		<button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-			<span aria-hidden="true">&times;</span>
-		</button>
-	</div>
-	<div class="modal-body">
-		<form>
-			<div class="form-group">
-				<label for="dateOfBirth">Date of birth</label>
-				<div class="input-group">
-					<input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
-					<div class="input-group-append">
-						<button class="btn btn-outline-secondary" (click)="dp.toggle()" type="button">
-							<img src="img/calendar-icon.svg" style="width: 1.2rem; height: 1rem; cursor: pointer;" />
-						</button>
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
-	</div>
-</ng-template> -->
