--- a/src/app/profile/changepassword/changepassword.component.html
+++ b/src/app/profile/changepassword/changepassword.component.html
@@ -5,16 +5,6 @@
                 <div class="col-md-12 col-12 icon-option mb-3">
 
                     <ul class="">
-                        <!-- <li class="ico-fb">
-                          <a href="#" title="facebook">
-                              <img src="/assets/Images/icons/ico-pipe.png" />
-                          </a>
-                      </li>
-                      <li class="ico-line">
-                          <a href="#" title="line">
-                              <img src="/assets/Images/icons/ico-download.png" />
-                          </a>
-                      </li> -->
                         <li class="ico-yt">
                             <a title="print">
                                 <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
@@ -143,23 +133,22 @@
                             <div class="btn-wrapper" style="margin: 0;">
                                 <button class="btn-med btn-blue" type="button" (click)="requestotp()" [disabled]="loading">
                                     {{ 'BUTTON.otp' | translate }}
-                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    <!-- <i class="fa fa-angle-right" aria-hidden="true"></i> -->
                                 </button>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>{{ 'LOGIN.otp-receive' | translate }}</p>
+                            <p>{{ 'LOGIN.otp-receive' | translate }} Ref. Code {{ res?.refotp }}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss4('otp')">
                             <div class="input-wrapper">
-                                    <input class="bg-gray" id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
+                                    <input class="bg-gray" id="otp" name="otp" maxlength="6" type="password" formControlName="otp" (keypress)="numberOnly($event)">
                                     <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
                                       <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate }}</p>
-                                      <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
                       
                                     </div>
                             </div>
