--- a/src/app/canvas-menu/canvas-menu.component.scss
+++ b/src/app/canvas-menu/canvas-menu.component.scss
@@ -29,3 +29,13 @@
     &:hover {
     }
 }
+
+.nav-link[data-toggle].collapsed:after {
+    content: "▾";
+}
+.nav-link[data-toggle]:not(.collapsed):after {
+    content: "▴";
+}
+.nav-link{
+    padding: 0px
+}
