--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -80,9 +80,12 @@ input[type="text"],input[type="password"]{
 }
 
 .copyright, .copyright-footer {
-    a {
-        font-size: $text-x-small;
-        line-height: $text-content;
-        color: $color-primary;
+    .linklogin {
+        
+            font-size: $text-x-small;
+            line-height: $text-content;
+            color: $color-primary;
+        
     }
+    
 }
