--- a/src/app/profile/edit-profile/edit-profile.component.html
+++ b/src/app/profile/edit-profile/edit-profile.component.html
@@ -5,16 +5,6 @@
                 <div class="col-md-12 col-12 icon-option mb-3">
 
                     <ul class="">
-                        <!-- <li class="ico-fb">
-                            <a href="#" title="facebook">
-                                <img src="/assets/Images/icons/ico-pipe.png" />
-                            </a>
-                        </li>
-                        <li class="ico-line">
-                            <a href="#" title="line">
-                                <img src="/assets/Images/icons/ico-download.png" />
-                            </a>
-                        </li> -->
                         <li class="ico-yt">
                             <a title="print">
                                 <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
@@ -27,9 +17,12 @@
                 <div class="col-md-3">
                     <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
                     <div class="select-wrapper inline-block">
-                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
+                        <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker"
+                            data-live-search="true">
                             <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{
-                                unitholder.UnitholderNo }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container></option>
+                                unitholder.UnitholderNo }}
+                                <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
+                            </option>
                         </select>
                     </div>
                 </div>
@@ -43,8 +36,6 @@
         </div>
     </div>
 
-
-    <!-- <div class="col-md-6"> -->
     <div class="form-profile-wrapper">
         <form [formGroup]="form">
             <div class="detail-body-wrapper">
@@ -62,7 +53,8 @@
                         <div class="input-wrapper">
                             <input id="address" name="address" type="text" formControlName="address" required maxlength="250">
                             <div class="form-control-feedback" *ngIf="this.form.controls.address.errors && (this.form.controls.address.touched)">
-                                <p *ngIf="this.form.controls.address.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.address.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
@@ -73,13 +65,13 @@
 
                             <select title="{{ 'CONTENT.select-p' | translate }}" name="province" id="province" formControlName="province" required (change)="onprovincechange()"
                                 class="selectpicker">
-                                <!-- <option value="" *ngIf="!this.form.controls.province.value">กรุณาเลือกจังหวัด</option> -->
                                 <option [ngValue]="province" *ngFor="let province of provincelist; let i = index">{{ province.ProvinceName
                                     }}
                                 </option>
                             </select>
                             <div class="form-control-feedback" *ngIf="this.form.controls.province.errors && (this.form.controls.province.touched)">
-                                <p *ngIf="this.form.controls.province.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.province.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
@@ -87,16 +79,15 @@
                     <div class="col-md-3 form-group" [ngClass]="ValidatorDisplayCss('amphur')">
                         <p>{{ 'CONTENT.amphur' | translate }}</p>
                         <div class="select-wrapper inline-block">
-                            <!-- <input id="amphur" name="amphur" maxlength="30" type="text" formControlName="amphur"> -->
-                            <select title="{{ 'CONTENT.select-a' | translate }}" name="amphur" id="amphur" formControlName="amphur" required (change)="onamphurchange()" [attr.disabled]="!this.form.controls.province.value ? '' : null"
-                                class="selectpicker">
-                                <!-- <option value="" *ngIf="!this.form.controls.amphur.value">กรุณาเลือกอำเภอ</option> -->
+                            <select title="{{ 'CONTENT.select-a' | translate }}" name="amphur" id="amphur" formControlName="amphur" required (change)="onamphurchange()"
+                                [attr.disabled]="!this.form.controls.province.value ? '' : null" class="selectpicker">
                                 <option [ngValue]="amphur" *ngFor="let amphur of amphurlist; let i = index">{{ amphur.UmpurName
                                     }}
                                 </option>
                             </select>
                             <div class="form-control-feedback" *ngIf="this.form.controls.amphur.errors && (this.form.controls.amphur.touched)">
-                                <p *ngIf="this.form.controls.amphur.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.amphur.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
@@ -108,16 +99,15 @@
                     <div class="col-md-3 form-group" [ngClass]="ValidatorDisplayCss('tambon')">
                         <p>{{ 'CONTENT.tambon' | translate }}</p>
                         <div class="select-wrapper inline-block">
-                            <!-- <input id="tambon" name="tambon" maxlength="30" type="text" formControlName="tambon"> -->
-                            <select title="{{ 'CONTENT.select-t' | translate }}" name="tambon" id="tambon" formControlName="tambon" required (change)="ontambonchange()" [attr.disabled]="!this.form.controls.amphur.value ? '' : null"
-                                class="selectpicker">
-                                <!-- <option value="" *ngIf="!this.form.controls.tambon.value">กรุณาเลือกตำบล</option> -->
+                            <select title="{{ 'CONTENT.select-t' | translate }}" name="tambon" id="tambon" formControlName="tambon" required (change)="ontambonchange()"
+                                [attr.disabled]="!this.form.controls.amphur.value ? '' : null" class="selectpicker">
                                 <option [ngValue]="tambon" *ngFor="let tambon of tambonlist; let i = index">{{ tambon.TumbolName
                                     }}
                                 </option>
                             </select>
                             <div class="form-control-feedback" *ngIf="this.form.controls.tambon.errors && (this.form.controls.tambon.touched)">
-                                <p *ngIf="this.form.controls.tambon.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.tambon.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
@@ -128,7 +118,8 @@
                         <div class="input-wrapper ">
                             <input id="post-code" maxlength="30" type="text" name="ContactZipCode" formControlName="postcode" required (change)="autoselected()">
                             <div class="form-control-feedback" *ngIf="this.form.controls.postcode.errors && (this.form.controls.postcode.touched)">
-                                <p *ngIf="this.form.controls.postcode.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.postcode.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
@@ -142,19 +133,12 @@
                                 </option>
                             </select>
                             <div class="form-control-feedback" *ngIf="this.form.controls.country.errors && (this.form.controls.country.touched)">
-                                <p *ngIf="this.form.controls.country.errors.required">{{ 'Validation.required' | translate }}</p>
+                                <p *ngIf="this.form.controls.country.errors.required">{{ 'Validation.required' | translate
+                                    }}</p>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-                <!-- <div class="row">                    
-
-                    
-
-                </div> -->
-
 
             </div>
             <div class="detail-footer-wrapper">
@@ -170,9 +154,6 @@
                     <div class="col-md-3 form-group">
                         <div class="input-wrapper ">
                             <input id="m-phone" name="m-phone" type="text" formControlName="Mphone" maxlength="50">
-                            <!-- <div class="form-control-feedback" *ngIf="this.form.controls.Mphone.errors && (this.form.controls.Mphone.touched)">
-                                <p *ngIf="this.form.controls.Mphone.errors.required">กรุณากรอกข้อมูลให้ครบถ้วน</p>
-                            </div> -->
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -181,46 +162,20 @@
                     <div class="col-md-3 form-group">
                         <div class="input-wrapper ">
                             <input id="w-phone" name="w-phone" type="text" formControlName="Ophone" maxlength="50">
-
                         </div>
                     </div>
-                    <!-- 
-                    <div class="col-md-3">
-                        <span>เบอร์โทรศัพท์ มือถือ</span>
-                    </div>
-
-                    <div class="col-md-3">
-                        <div class="input-wrapper ">
-                            <input id="password" name="password" maxlength="30" type="text" value="0850594153">
-                        </div>
-                    </div> -->
                 </div>
-
-                <!-- <div class="row">
-                    
-                    
-                </div> -->
 
                 <div class="row">
                     <div class="col-md-3">
                         <p class="txt-middle">{{ 'CONTENT.f-num' | translate }}</p>
                     </div>
-
                     <div class="col-md-3 form-group">
                         <div class="input-wrapper ">
                             <input id="f-num" name="f-num" type="text" formControlName="Faxno" maxlength="50">
 
                         </div>
                     </div>
-
-                    <!-- <div class="col-md-3">
-                        <span>อีเมล</span>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="input-wrapper ">
-                            <input id="password" name="password" maxlength="30" type="text" value="natiwat@hotmail.com">
-                        </div>
-                    </div> -->
 
                     <div class="col-md-3 txt-middle">
                         <p>{{ 'CONTENT.tax' | translate }}</p>
@@ -244,24 +199,19 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <!-- data-toggle="modal" data-target="#disclaimer" data-backdrop="static"
-                            data-keyboard="false" -->
+
                 <div class="row mt-3 justify-content-center">
                     <div class="col-md-2 col-6">
                         <button class="btn-med btn-primary btn" [disabled]="!this.form.valid || loading == true" type="submit" (click)="onSubmited()">
                             {{ 'BUTTON.ok' | translate }}
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
-
                         </button>
-
                     </div>
                     <div class="col-md-2 col-6">
                         <button class="btn-med btn-cancel" (click)="reset()" type="button">
                             {{ 'BUTTON.cancel' | translate }}
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
-
                         </button>
                     </div>
                 </div>
@@ -271,11 +221,10 @@
     </div>
 </div>
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" style="z-index: 9999;" id="otpprofile" *ngIf="res">
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" style="z-index: 9999;" id="otpprofile">
     <div class="modal-dialog otp" role="document">
         <div class="modal-content">
             <div class="modal-header">
-
                 <h4 class="modal-title">{{ 'LOGIN.otp' | translate }}</h4>
             </div>
             <div class="modal-body" id="content-scroll-1">
@@ -296,23 +245,25 @@
                             <div class="btn-wrapper" style="margin: 0;">
                                 <button class="btn-med btn-blue btn" (click)="requestotp()" [disabled]="loading" type="button">
                                     {{ 'BUTTON.otp' | translate }}
-                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    <!-- <div class="d-block d-xl-none d-lg-none d-md-none">
+                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                    </div> -->
                                 </button>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <p>{{ 'LOGIN.otp-receive' | translate }}</p>
+                            <p>{{ 'LOGIN.otp-receive' | translate }} Ref. Code {{ res?.refotp }}</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss1('otp')">
                             <div class="input-wrapper">
-                                <input class="bg-gray" id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
+                                <input class="bg-gray" id="otp" name="otp" maxlength="6" type="password" formControlName="otp" (keypress)="numberOnly($event)">
                                 <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
-                                    <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate }}</p>
-                                    <!-- <p *ngIf="this.form.controls.otp.errors.pattern">ข้อมูลไม่ถูกต้อง</p> -->
+                                    <p *ngIf="this.formotp.controls.otp.errors.required">{{ 'Validation.required' | translate
+                                        }}</p>
 
                                 </div>
                             </div>
@@ -354,7 +305,7 @@
     <!-- /.modal-dialog -->
 </div>
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;" *ngIf="message">
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
