--- a/src/app/regular-list/regular-purchase/regular-purchase.component.html
+++ b/src/app/regular-list/regular-purchase/regular-purchase.component.html
@@ -12,16 +12,6 @@
         <div class="col-md-12 col-12 icon-option mb-3">
 
           <ul class="">
-            <!-- <li class="ico-fb">
-              <a href="#" title="facebook">
-                <img src="/assets/Images/icons/ico-pipe.png" />
-              </a>
-            </li>
-            <li class="ico-line">
-              <a href="#" title="line">
-                <img src="/assets/Images/icons/ico-download.png" />
-              </a>
-            </li> -->
             <li class="ico-yt">
               <a title="print">
                 <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
@@ -69,7 +59,6 @@
             <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('fund')">
               <div class="select-wrapper inline-block">
                 <select id="fund" name="fund" formControlName="fund" class="selectpicker" data-live-search="true" title="{{ 'CONTENT.select' | translate }}">
-                  <!-- <option value="" disabled>กรุณาเลือก</option> -->
                   <option [ngValue]="fund" *ngFor="let fund of fundlist?.fundlist; let i = index">
                     <ng-container *ngIf="lang == 'th' ">{{ fund.FundName }}</ng-container>
                     <ng-container *ngIf="lang == 'en' ">{{ fund.FundNameEng }}</ng-container>
@@ -89,15 +78,6 @@
               <div class="input-wrapper ">
                 <input id="Bank" [(ngModel)]="Bank" name="Bank" maxlength="30" type="text" class="bg-gray" readonly [ngModelOptions]="{standalone: true}" placeholder="{{ 'CONTENT.ats' | translate }}">
               </div>
-
-              <!-- <div class="select-wrapper inline-block">              
-                <select [(ngModel)]="Bank" name="Bank" (ngModelChange)="onChange()" id="Bank" [ngModelOptions]="{standalone: true}">
-                  <option [ngValue]="bank" *ngFor="let bank of banklist?.bankaccountlist; let i = index">{{ bank.BankName
-                    }}
-                  </option>
-                </select>
-              </div> -->
-
             </div>
             <div class="col-md-4">
               <p class="txt-middle">{{ 'CONTENT.amount' | translate }}</p>
@@ -110,21 +90,14 @@
                   <p *ngIf="this.formsubstanding.controls.amount.errors.required">{{ 'Validation.required' | translate }}</p>
                   <p *ngIf="cpwd.hasError('invalid')">กรุณากรอกจำนวนขั้นต่ำ 1000 บาท</p>
                 </div>
+                <p class="color-red no-margin" *ngIf="this.formsubstanding.controls.amount.value == 0 ">{{ 'CONTENT.lesszero' | translate }}</p>
               </div>
             </div>
             <div class="col-md-3 col-6">
               <p class="txt-middle">{{ 'CONTENT.bath' | translate }}</p>
-              <!-- <div class="select-wrapper inline-block">              
-              <select name="ddlLink" id="ddlLink">
-                <option value="0" selected="" disabled>กรุณาเลือก</option>
-                <option value="บาท">บาท</option>
-                <option value="หน่วย">หน่วย</option>
-                <option value="ทั้งหมด">ทั้งหมด</option>
-              </select>
-            </div> -->
             </div>
-
           </div>
+          
         </div>
         <div class="col-md-9">
           <div class="row">
@@ -217,10 +190,6 @@
           <label>{{ 'CONTENT.order-to-be' | translate }}</label>
         </h4>
       </div>
-      <!-- <div class="col-md-6 text-md-right">
-        <i class="fa fa-angle-right mr-1" aria-hidden="true"></i>
-        <label>{{ 'CONTENT.view-all' | translate }}</label>
-      </div> -->
       <div class="col-md-12 mt-5 text-center" *ngIf="nolist">
         <p>{{ 'CONTENT.no-list' | translate }}</p>
       </div>
@@ -284,11 +253,13 @@
                     <td>
                       {{ 'CONTENT.monthly' | translate }} {{ 'CONTENT.every-day' | translate }} ({{list.StandingOrderDayNo}})
                     </td>
-                    <td class="">
-                      {{list.StandingOrderEffectiveDate | datethai}} - {{list.ExpiryDate | datethai}}
+                    <td class="">                      
+                      <ng-container *ngIf="lang == 'th' ">{{list.StandingOrderEffectiveDate | datethai}} - {{list.ExpiryDate | datethai}}</ng-container>
+                      <ng-container *ngIf="lang == 'en' ">{{list.StandingOrderEffectiveDate | dateeng}} - {{list.ExpiryDate | dateeng}}</ng-container>
                     </td>
-                    <td class="">
-                        {{list.StandingOrderDate | datethai}}, {{list.StandingOrderDate | time}}
+                    <td class="">                        
+                      <ng-container *ngIf="lang == 'th' ">{{list.StandingOrderDate | datethai}}, {{list.StandingOrderDate | time}}</ng-container>
+                      <ng-container *ngIf="lang == 'en' ">{{list.StandingOrderDate | dateeng}}, {{list.StandingOrderDate | time}}</ng-container>
                     </td>
                     <!-- <td>
                       <a>
@@ -314,7 +285,8 @@
   <div class="detail-footer-wrapper" *ngIf="userall == ''">
       <div class="row">
         <div class="col-md-12 mt-5 text-center">
-          <p>ไม่พบเลขที่ผู้ถือหน่วยลงทุน ไม่สามารถทำรายการได้</p>
+          <!-- <p>ไม่พบเลขที่ผู้ถือหน่วยลงทุน ไม่สามารถทำรายการได้</p> -->
+          <a href="https://www.lhfund.co.th/Investment/SellingPoint" target="_blank">กรุณาติดต่อตัวแทนของท่าน คลิกที่นี่</a>
         </div>
       </div>
     </div>
@@ -327,18 +299,8 @@
         <div class="col-md-12 col-12 icon-option mb-3">
 
           <ul class="">
-            <!-- <li class="ico-fb">
-              <a href="#" title="facebook">
-                <img src="/assets/Images/icons/ico-pipe.png" />
-              </a>
-            </li>
-            <li class="ico-line">
-              <a href="#" title="line">
-                <img src="/assets/Images/icons/ico-download.png" />
-              </a>
-            </li> -->
             <li class="ico-yt">
-              <a href="#" title="youtube">
+              <a title="print">
                 <img src="/assets/Images/icons/ico-print.png" />
               </a>
             </li>
@@ -478,18 +440,11 @@
         <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
-        <h3>แบบประเมินความเสี่ยงของท่านครบกำหนดแล้ว กรุณาปรับปรุงแบบประเมินความเสี่ยง เพื่อให้สามารถทำรายการซื้อ หรือ รายการสับเปลี่ยนเข้า
-          ด้วยค่ะ
+        <h3>{{ 'CONTENT.expiremodal' | translate }}
         </h3>
       </div>
       <div class="modal-footer" style="display: block;">
         <div class="row justify-content-center">
-          <!-- <div class="col-4">
-            <button class="btn-med btn-primary" data-dismiss="modal" (click)="checkpage('purchase-step1')">
-              {{ 'BUTTON.confirm' | translate }}
-              <i class="fa fa-angle-right" aria-hidden="true"></i>
-            </button>
-          </div> -->
           <div class="col-5">
             <button class="btn-med btn-cancel" data-dismiss="modal" routerLink="">
               {{ 'BUTTON.cancel' | translate }}
@@ -498,7 +453,7 @@
           </div>
           <div class="col-5">
             <button class="btn-med btn-primary" data-dismiss="modal" routerLink="/profile/suitability">
-              <p style="margin-top: 7px;">ทำแบบประเมิน
+              <p style="margin-top: 7px;">{{ 'BUTTON.suittest' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
@@ -515,8 +470,8 @@
         <h4 class="modal-title">{{ 'Modal.notifications' | translate }}</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
-        <h3 *ngIf="Islevel">- ระดับความเสี่ยงในการลงทุนของท่านน้อยกว่าระดับความเสี่ยงของกองทุน</h3>
-        <h3 *ngIf="Isprotect">- กองทุนที่ท่านเลือกไม่มีนโยบายป้องกันความเสี่ยงอัตราแลกเปลี่ยนเต็มจำนวน</h3>
+        <h3 *ngIf="Islevel">- {{ 'CONTENT.risk-level' | translate }}</h3>
+        <h3 *ngIf="Isprotect">- {{ 'CONTENT.hed' | translate }}</h3>
       </div>
       <div class="modal-footer" style="display: block;">
         <div class="row justify-content-center">
@@ -534,7 +489,7 @@
           </div>
           <div class="col-4" *ngIf="Islevel">
             <button class="btn-med btn-primary" data-dismiss="modal" routerLink="/profile/suitability">
-              <p style="margin-top: 7px;">ทำแบบประเมินความเสี่ยง
+              <p style="margin-top: 7px;">{{ 'BUTTON.suittest' | translate }}
                 <i class="fa fa-angle-right" aria-hidden="true"></i>
               </p>
             </button>
@@ -575,8 +530,9 @@
                       <!-- วันที่ทำรายการ -->
                       {{ 'TABLE.or-date-time' | translate }}
                     </td>
-                    <td class="text-left content">
-                      {{deletedOrder?.StandingOrderDate | datethai}}, {{deletedOrder?.StandingOrderDate | time}}
+                    <td class="text-left content">                      
+                      <ng-container *ngIf="lang == 'th' ">{{deletedOrder?.StandingOrderDate | datethai}}, {{deletedOrder?.StandingOrderDate | time}}</ng-container>
+                      <ng-container *ngIf="lang == 'en' ">{{deletedOrder?.StandingOrderDate | dateeng}}, {{deletedOrder?.StandingOrderDate | time}}</ng-container>
                     </td>
                   </tr>
                   <!-- <tr>
@@ -620,7 +576,9 @@
                       {{ 'CONTENT.duration' | translate }}
                     </td>
                     <td class="text-left content">
-                      {{deletedOrder?.StandingOrderEffectiveDate | datethai}} - {{deletedOrder?.ExpiryDate | datethai}}
+                      
+                      <ng-container *ngIf="lang == 'th' ">{{deletedOrder?.StandingOrderEffectiveDate | datethai}} - {{deletedOrder?.ExpiryDate | datethai}}</ng-container>
+                      <ng-container *ngIf="lang == 'en' ">{{deletedOrder?.StandingOrderEffectiveDate | dateeng}} - {{deletedOrder?.ExpiryDate | dateeng}}</ng-container>
                     </td>
                   </tr>
 
@@ -649,3 +607,5 @@
   </div>
   <!-- /.modal -->
 </div>
+
+<app-footerforwarning *ngIf="userall != ''"></app-footerforwarning>
