--- a/src/app/report/confirmation/confirmation.component.html
+++ b/src/app/report/confirmation/confirmation.component.html
@@ -5,16 +5,6 @@
         <div class="col-md-12 col-12 icon-option mb-3">
 
           <ul class="">
-            <!-- <li class="ico-fb">
-              <a href="#" title="facebook">
-                <img src="/assets/Images/icons/ico-pipe.png" />
-              </a>
-            </li>
-            <li class="ico-line">
-              <a href="#" title="line">
-                <img src="/assets/Images/icons/ico-download.png" />
-              </a>
-            </li> -->
             <li class="ico-yt">
               <a title="print">
                 <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
@@ -27,14 +17,15 @@
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block ">
-            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker"
+              data-live-search="true">
               <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
+                }}
+                <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
               </option>
             </select>
           </div>
         </div>
-
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-name' | translate }}</p>
           <span class="txt-middle">{{ userselect.FirstName}} {{ userselect.LastName}}</span>
@@ -44,42 +35,38 @@
           <p>{{ 'CONTENT.address' | translate }}</p>
           <span class="txt-middle">{{ userselect.ContactAddress}}</span>
         </div>
-
       </div>
     </div>
   </div>
   <div class="detail-body-wrapper">
     <form [formGroup]="formconfirm">
-    <div class="row">
-      <div class="col-md-12">
-        <H4 class="text-left">{{ 'CONTENT.select-date-t' | translate }}</H4>
-      </div>
-      <div class="col-md-6">
-        <div class="row">
-
-          <div class="col-md-3">
-            <p class="txt-middle">{{ 'CONTENT.transaction-date' | translate }}</p>
-          </div>
-          <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('dateorder')">
-            <div class="input-wrapper">
-              <input class=" textinput dateinput bg-gray" formControlName="dateorder" ngbDatepicker #d="ngbDatepicker" id="dateorder" placeholder="{{ 'CONTENT.place-holder-date' | translate }}"
-                name="dateorder" type="text" (click)="d.toggle()" readonly>
+      <div class="row">
+        <div class="col-md-12">
+          <H4 class="text-left">{{ 'CONTENT.select-date-t' | translate }}</H4>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <p class="txt-middle">{{ 'CONTENT.transaction-date' | translate }}</p>
+            </div>
+            <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('dateorder')">
+              <div class="input-wrapper">
+                <input class=" textinput dateinput bg-gray" formControlName="dateorder" ngbDatepicker #d="ngbDatepicker" id="dateorder" placeholder="{{ 'CONTENT.place-holder-date' | translate }}"
+                  name="dateorder" type="text" (click)="d.toggle()" readonly>
                 <div class="form-control-feedback" *ngIf="this.formconfirm.controls.dateorder.errors && (this.formconfirm.controls.dateorder.touched)">
-                    <p *ngIf="this.formconfirm.controls.dateorder.errors.required">{{ 'Validation.required' | translate }}</p>
+                  <p *ngIf="this.formconfirm.controls.dateorder.errors.required">{{ 'Validation.required' | translate }}</p>
                 </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-6">
+              <button class="btn-med btn-primary btn" [disabled]="loading" (click)="OnSubmitd()">
+                {{ 'BUTTON.ok' | translate }}
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </button>
             </div>
           </div>
-          <div class="col-md-3 col-6">
-            <button class="btn-med btn-primary btn" [disabled]="loading" (click)="OnSubmitd()">
-              {{ 'BUTTON.ok' | translate }}
-              <i class="fa fa-angle-right" aria-hidden="true"></i>
-            </button>
-          </div>
-
-
         </div>
       </div>
-    </div>
     </form>
 
   </div>
@@ -90,7 +77,7 @@
           {{ 'NAVBAR.transaction-comfirmmation' | translate }}
         </h3>
         <ul>
-          
+
           <li *ngFor="let list of confirmlist; let i = index">
             <div class="row">
               <div class="col-md-10 col-9">
@@ -104,45 +91,12 @@
                   <img src="/assets/Images/icons/ico-download-white.png">
                 </button>
               </div>
-
-              
             </div>
           </li>
 
           <div class="col-md-12 mt-5 text-center" *ngIf="nolist">
-              <p>{{ 'CONTENT.not-found' | translate }}</p>
-            </div>
-          <!-- <li>
-            <div class="row">
-              <div class="col-md-10 col-9">
-                <a href="#" title="ชื่อเมนู">
-                  (ชื่อ) ใบยืนยันการทำรายการ
-                </a>
-              </div>
-              <div class="col-md-2 col-3">
-                <button class="btn-sm btn-download width50 ">
-                  <p>Download</p>
-                  <img src="/assets/Images/icons/ico-download-white.png">
-                </button>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="row">
-              <div class="col-md-10 col-9">
-                <a href="#" title="ชื่อเมนู">
-                  (ชื่อ) ใบยืนยันการทำรายการ
-                </a>
-              </div>
-              <div class="col-md-2 col-3">
-                <button class="btn-sm btn-download width50 ">
-                  <p>Download</p>
-                  <img src="/assets/Images/icons/ico-download-white.png">
-                </button>
-              </div>
-            </div>
-          </li> -->
-
+            <p>{{ 'CONTENT.not-found' | translate }}</p>
+          </div>
         </ul>
         <div class="clearfix"></div>
       </div>
@@ -150,11 +104,6 @@
   </div>
 </div>
 
-<!-- <select class="selectpicker" data-live-search="true" title="กรุณาเลือก">
-  <option >Hot Dog, Fries and a Soda</option>
-  <option>Burger, Shake and a Smile</option>
-  <option>Sugar, Spice and all things nice</option>
-</select> -->
 <div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
