--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,4 +1,3 @@
-
 <div class="" id="maincontainer-wrapper">
   <div class="page-content-wrapper">
     <div class="mutual-fund-wrapper">
@@ -11,6 +10,7 @@
                   aria-expanded="false">
                   เมนูกองทุน
                 </button>
+
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                   <a class="dropdown-item" (click)="navigate('receipt-history')" title="{{ 'NAVBAR.dividend-detail' | translate }}">{{
                     'NAVBAR.dividend-detail' | translate }}</a>
@@ -27,6 +27,7 @@
                     | translate }}</a>
                 </div>
               </div>
+
               <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                 <li role="presentation" id="menu3">
                   <a title="{{ 'NAVBAR.dividend-detail' | translate }}" (click)="navigate('receipt-history')">{{ 'NAVBAR.dividend-detail'
@@ -54,7 +55,6 @@
                 <li role="presentation" id="menu9">
                   <a title="{{ 'NAVBAR.type' | translate }}" (click)="navigate('type')">{{ 'NAVBAR.type' | translate }}</a>
                 </li>
-
               </ul>
             </div>
 
@@ -65,5 +65,6 @@
         </div>
       </div>
     </div>
-
   </div>
+  
+  <app-footerforwarning></app-footerforwarning>
