--- a/src/app/report/type/type.component.html
+++ b/src/app/report/type/type.component.html
@@ -1,18 +1,8 @@
 <div class="fund-table-wrapper">
-  <div class="detail-body-wrapper">
+  <div class="detail-body-wrapper" style="border-bottom: 0px;">
     <div class="row">
       <div class="col-md-12 icon-option mb-3">
         <ul class="">
-          <!-- <li class="ico-fb">
-            <a href="#" title="facebook">
-              <img src="/assets/Images/icons/ico-pipe.png" />
-            </a>
-          </li>
-          <li class="ico-line">
-            <a href="#" title="line">
-              <img src="/assets/Images/icons/ico-download.png" />
-            </a>
-          </li> -->
           <li class="ico-yt">
             <a title="print">
               <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
@@ -27,9 +17,6 @@
       <div class="col-md-12">
         <h4>{{ 'CONTENT.tran-type' | translate }}</h4>
       </div>
-      <!-- <div class="col-md-3">
-        <p class="no-margin">BF = รายการยกมา</p>
-      </div> -->
       <div class="col-md-3">
         <p class="no-margin">SUB = {{ 'CONTENT.SUB' | translate }}</p>
       </div>
@@ -42,74 +29,27 @@
       <div class="col-md-3">
         <p class="no-margin">SWO = {{ 'CONTENT.SWO' | translate }}</p>
       </div>
-      <!-- <div class="col-md-3">
-        <p class="no-margin">ROLL = รายการลงทุนต่อเนื่อง</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">AR = รายการขายคืนอัตโนมัติ</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">AS = รายการรับซื้ออัตโนมัติ</p>
-      </div> -->
       <div class="col-md-3">
         <p class="no-margin">TRI = {{ 'CONTENT.TRI' | translate }}</p>
       </div>
       <div class="col-md-3">
         <p class="no-margin">TRO = {{ 'CONTENT.TRO' | translate }}</p>
       </div>
-      <!-- <div class="col-md-3">
-        <p class="no-margin">CFM = ยืนยันรายการ</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">UD = แสดงรายการมูลค่าหน่วยลงทุน</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">TOTAL SUM = รวมเงินลงทุน</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">CR = เช็คคืน</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">REJ = รายการยกเลิก</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">ADJ = รายการปรับปรุง</p>
-      </div> -->
-
       <div class="col-md-12 mt-3">
         <h4>{{ 'CONTENT.tran-way' | translate }}</h4>
       </div>
-
       <div class="col-md-3">
         <p class="no-margin">LHF = {{ 'CONTENT.LHF' | translate }}</p>
       </div>
       <div class="col-md-3">
         <p class="no-margin">LHF-I = {{ 'CONTENT.LHF-I' | translate }}</p>
       </div>
-      <!-- <div class="col-md-3">
-        <p class="no-margin">P = รายการผ่าน LH BANK</p>
+      <div class="col-md-3">
+        <p class="no-margin">FUNDCONNECT = {{ 'CONTENT.FUNDCONNECT' | translate }}</p>
       </div>
       <div class="col-md-3">
-        <p class="no-margin">INET = รายการผ่าน LH BANK Speedy</p>
+        <p class="no-margin">SELLINGAGENT = {{ 'CONTENT.SELLINGAGENT' | translate }}</p>
       </div>
-      <div class="col-md-3">
-        <p class="no-margin">MNET = รายการผ่าน Mobile Banking</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">ATM = รายการผ่าน ATM LH BANK</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">SA = รายการผ่าน Selling Agent</p>
-      </div> -->
-      <div class="col-md-3">
-        <p class="no-margin">FUNDCONNECT  = {{ 'CONTENT.FUNDCONNECT' | translate }}</p>
-      </div>
-      <div class="col-md-3">
-        <p class="no-margin">SELLINGAGENT  = {{ 'CONTENT.SELLINGAGENT' | translate }}</p>
-      </div>
-
     </div>
-
-
   </div>
 </div>
