--- a/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
+++ b/src/app/rmf-ltf/ltf-condition-complete/ltf-condition-complete.component.html
@@ -5,31 +5,22 @@
         <div class="col-md-12 col-12 icon-option mb-3">
 
           <ul class="">
-            <!-- <li class="ico-fb">
-              <a href="#" title="facebook">
-                <img src="/assets/Images/icons/ico-pipe.png" />
-              </a>
-            </li>
-            <li class="ico-line">
-              <a href="#" title="line">
-                <img src="/assets/Images/icons/ico-download.png" />
-              </a>
-            </li> -->
             <li class="ico-yt">
               <a title="print">
                 <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
               </a>
             </li>
-
           </ul>
         </div>
 
         <div class="col-md-3">
           <p>{{ 'CONTENT.unit-holder-num' | translate }}</p>
           <div class="select-wrapper inline-block">
-            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker" data-live-search="true">
+            <select [(ngModel)]="unitholderno" name="unitholderno" (ngModelChange)="onChange()" id="unitholderno" class="selectpicker"
+              data-live-search="true">
               <option [ngValue]="unitholder" *ngFor="let unitholder of userall.unitholderlist; let i = index">{{ unitholder.UnitholderNo
-                }} <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
+                }}
+                <ng-container *ngIf="unitholder.AgentCode">({{unitholder.AgentCode }})</ng-container>
               </option>
             </select>
           </div>
@@ -48,7 +39,7 @@
       </div>
     </div>
   </div>
-  <div class="detail-body-wrapper">
+  <div class="detail-body-wrapper" style="border-bottom: 0px;">
     <div class="table-responsive">
       <table class="table table-nav">
         <thead>
@@ -85,16 +76,11 @@
               <p>{{ 'CONTENT.not-found' | translate }}</p>
             </td>
           </tr>
+
           <ng-container *ngFor="let orderltflist of ltflist">
-            <!-- <tr class="topic">
-            <th colspan="11">
-              9990244757
-            </th>
-          </tr> -->
             <ng-container *ngIf="!orderltflist.islast">
               <tr class="line" *ngIf="orderltflist.FundNameGroup || orderltflist.FundCodeGroup">
                 <td colspan="6">
-                  <!-- {{ orderltflist.FundNameGroup }} ({{orderltflist.FundCodeGroup}}) -->
                   <ng-container *ngIf="lang == 'th' ">{{ orderltflist.FundNameGroup }} ({{orderltflist.FundCodeGroup}})</ng-container>
                   <ng-container *ngIf="lang == 'en' ">{{ orderltflist.FundNameEngGroup }} ({{orderltflist.FundCodeGroup}})</ng-container>
                 </td>
@@ -103,14 +89,16 @@
                 <td class="text-left">
                   &nbsp;
                 </td>
-                <td class="">
-                  {{ orderltflist.FirstPurchaseDate | datethai }}
+                <td class="">                  
+                  <ng-container *ngIf="lang == 'th' ">{{ orderltflist.FirstPurchaseDate | datethai }}</ng-container>
+                  <ng-container *ngIf="lang == 'en' ">{{ orderltflist.FirstPurchaseDate | dateeng }}</ng-container>
                 </td>
                 <td class="">
                   {{ orderltflist.Unit | tofix4 }}
                 </td>
-                <td class="">
-                  {{ orderltflist.BalanceDate | datethai }}
+                <td class="">                  
+                  <ng-container *ngIf="lang == 'th' ">{{ orderltflist.BalanceDate | datethai }}</ng-container>
+                  <ng-container *ngIf="lang == 'en' ">{{ orderltflist.BalanceDate | dateeng }}</ng-container>
                 </td>
                 <td class="txt-right">
                   {{ orderltflist.NAV | tofix4 }}
@@ -128,7 +116,7 @@
                 &nbsp;
               </th>
               <th class="text-right">
-                <!-- {{orderltflist.nav | tofix4 }} -->
+                &nbsp;
               </th>
               <th class="text-right">
                 {{orderltflist.unit | tofix }}
@@ -141,7 +129,6 @@
               {{ 'TABLE.total' | translate }}
             </th>
             <th colspan="3" class="custom-label">
-              <!-- รวม {{list.FundCode}} -->
               &nbsp;
             </th>
             <th class="text-right custom-label">
@@ -152,9 +139,7 @@
             </th>
 
           </tr>
-
         </tbody>
-
       </table>
     </div>
   </div>
