--- a/src/assets/Content/default/sass/_global.scss
+++ b/src/assets/Content/default/sass/_global.scss
@@ -14,17 +14,6 @@ body .swal2-modal .swal2-content {
 /* Paste this css to your style sheet file or under head tag */
 /* This only works with JavaScript,
 if it's not present, don't show loader */
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
-.se-pre-con {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  background: center no-repeat #232323;
-}
 
 /* main structure */
 #main-wrapper{
@@ -152,11 +141,13 @@ if it's not present, don't show loader */
     margin: 0;
 }
 .ngx-pagination {
-    span{
-        color: unset !important;
-    }
+    
     .current{
         background: $color-primary !important;
+
+        span{
+            color: white !important;
+        }
     }
 }
 .bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) {
