--- a/src/assets/Content/default/sass/layout/_layout-default.scss
+++ b/src/assets/Content/default/sass/layout/_layout-default.scss
@@ -1,3 +1,105 @@
+.no-js #loader {
+    display: none;
+}
+
+.js #loader {
+    display: block;
+    position: absolute;
+    left: 100px;
+    top: 0;
+}
+
+.se-pre-con {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    display: none;
+    background-color: #ddd;
+    opacity: 0.25;
+    // background: url('../../../../Images/reic_loading.gif') center no-repeat #fff;
+
+    .preloader {
+        margin: 10em auto 0;
+        width: 66px;
+        height: 12px;
+    }
+
+    .preloader .line {
+        width: 1px;
+        height: 12px;
+        background: #fff;
+        margin: 0 1px;
+        display: inline-block;
+        animation: opacity-1 1000ms infinite ease-in-out;
+        display: none;
+    }
+
+    .preloader .line-1, .preloader-2 .line-1 {
+        animation-delay: 800ms;
+    }
+
+    .preloader .line-2, .preloader-2 .line-2 {
+        animation-delay: 600ms;
+    }
+
+    .preloader .line-3, .preloader-2 .line-3 {
+        animation-delay: 400ms;
+    }
+
+    .preloader .line-4, .preloader-2 .line-4 {
+        animation-delay: 200ms;
+    }
+
+    .preloader .line-6, .preloader-2 .line-6 {
+        animation-delay: 200ms;
+    }
+
+    .preloader .line-7, .preloader-2 .line-7 {
+        animation-delay: 400ms;
+    }
+
+    .preloader .line-8, .preloader-2 .line-8 {
+        animation-delay: 600ms;
+    }
+
+    .preloader .line-9, .preloader-2 .line-9 {
+        animation-delay: 800ms;
+    }
+
+    @keyframes opacity-1 {
+        0% {
+            opacity: 1;
+        }
+
+        50% {
+            opacity: 0;
+        }
+
+        100% {
+            opacity: 1;
+        }
+    }
+
+    @keyframes opacity-2 {
+        0% {
+            opacity: 1;
+            height: 15px;
+        }
+
+        50% {
+            opacity: 0;
+            height: 12px;
+        }
+
+        100% {
+            opacity: 1;
+            height: 15px;
+        }
+    }
+}
 .max-width-wrapper{
     display: block;
     width: 100%;
@@ -2607,7 +2709,7 @@
 
                 .modal-title {
                     float: left;
-                    max-width: 90%;
+                    max-width: 100%;
                     color: $color-hover;
                     font-family: $default-font;
                     font-size: $text-large;
